# healthsim-hello

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
docs/architecture/: module-inventory.md  platform-overview.md
docs/interactive/: claude-desktop-config.md  example-conversations.md  mcp-setup.md  question-categories.md
docs/python-foundations/: pydantic-guide.md  pytest-guide.md  virtual-environments.md
docs/tutorials/: environment-setup.md  membersim-tutorial.md  patientsim-tutorial.md  rxmembersim-conversations.md  rxmembersim-tutorial.md
examples/membersim/: basic_generation.py  test_examples.py  x12_export.py
examples/patientsim/: basic_generation.py  fhir_export.py  test_examples.py
examples/rxmembersim/: __init__.py  basic_generation.py  formulary_check.py  test_examples.py
tests/: test_structure.py
